tests/tests_p1/fail/prof/18missarg.min
program
	array vector[3] := 1, 2, 3;
	function number foobar number m ; string n ; array v do
		return m
start
	foobar(3, "hello")!
end
